// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useEffect Default - Component with one useEffect 1`] = `
Object {
  "useEffect": Array [
    Object {
      "_originScope": undefined,
      "action": [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "deps": Array [],
    },
  ],
}
`;

exports[`useEffect Default - Component with one useEffect 2`] = `
Object {
  "calls": Array [
    Object {
      "args": Arguments [
        Object {
          "callFunc": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
        },
        Object {},
      ],
      "result": <div>
        Some content
      </div>,
    },
  ],
  "dataTestId": undefined,
  "hooks": Object {
    "useEffect": Array [
      Object {
        "_originScope": undefined,
        "action": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "deps": Array [],
      },
    ],
  },
  "hooksCounter": undefined,
  "jestFn": [MockFunction] {
    "calls": Array [
      Array [
        Arguments [
          Object {
            "callFunc": [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
          },
          Object {},
        ],
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": <div>
          Some content
        </div>,
      },
    ],
  },
  "name": "OneUseEffect",
  "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
}
`;

exports[`useEffect Default with test id - Component with one useEffect 1`] = `
Object {
  "useEffect": Array [
    Object {
      "_originScope": undefined,
      "action": [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "deps": Array [],
    },
  ],
}
`;

exports[`useEffect Default with test id - Component with one useEffect 2`] = `
Object {
  "calls": Array [
    Object {
      "args": Arguments [
        Object {
          "callFunc": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "data-testid": "test-id",
        },
        Object {},
      ],
      "result": <div>
        Some content
      </div>,
    },
  ],
  "dataTestId": "test-id",
  "hooks": Object {
    "useEffect": Array [
      Object {
        "_originScope": undefined,
        "action": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "deps": Array [],
      },
    ],
  },
  "hooksCounter": undefined,
  "jestFn": [MockFunction] {
    "calls": Array [
      Array [
        Arguments [
          Object {
            "callFunc": [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
          },
          Object {},
        ],
      ],
      Array [
        Arguments [
          Object {
            "callFunc": [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "data-testid": "test-id",
          },
          Object {},
        ],
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": <div>
          Some content
        </div>,
      },
      Object {
        "type": "return",
        "value": <div>
          Some content
        </div>,
      },
    ],
  },
  "name": "OneUseEffect",
  "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
}
`;

exports[`useEffect Deps in the component 1`] = `
Object {
  "calls": Array [
    Object {
      "args": Arguments [
        Object {
          "deps": Array [
            1,
            Object {
              "property": "some",
            },
            "Text",
            false,
          ],
        },
        Object {},
      ],
      "result": <div>
        Registered with deps
      </div>,
    },
  ],
  "dataTestId": undefined,
  "hooks": Object {
    "useEffect": Array [
      Object {
        "_originScope": undefined,
        "action": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "deps": Array [
          1,
          Object {
            "property": "some",
          },
          "Text",
          false,
        ],
      },
    ],
  },
  "hooksCounter": undefined,
  "jestFn": [MockFunction] {
    "calls": Array [
      Array [
        Arguments [
          Object {
            "deps": Array [
              1,
              Object {
                "property": "some",
              },
              "Text",
              false,
            ],
          },
          Object {},
        ],
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": <div>
          Registered with deps
        </div>,
      },
    ],
  },
  "name": "WithDeps",
  "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
}
`;

exports[`useEffect Unmount registered component 1`] = `
Object {
  "calls": Array [
    Object {
      "args": Arguments [
        Object {},
        Object {},
      ],
      "result": <div>
        Registered with unmount
      </div>,
    },
  ],
  "dataTestId": undefined,
  "hooks": Object {
    "useEffect": Array [
      Object {
        "_originScope": undefined,
        "action": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": [MockFunction],
            },
          ],
        },
        "deps": Array [],
        "unmountAction": [MockFunction],
      },
    ],
  },
  "hooksCounter": undefined,
  "jestFn": [MockFunction] {
    "calls": Array [
      Array [
        Arguments [
          Object {},
          Object {},
        ],
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": <div>
          Registered with unmount
        </div>,
      },
    ],
  },
  "name": "WithUmount",
  "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
}
`;
